--- a/engines/engines.cabal
+++ b/engines/engines.cabal
@@ -21,5 +21,5 @@ executable engines
   -- other-modules:       
   -- other-extensions:    
   build-depends:       base >=4.8 && <4.9
-  -- hs-source-dirs:      
+  hs-source-dirs:      src
   default-language:    Haskell2010
